--- a/paper/manuscript.Rmd
+++ b/paper/manuscript.Rmd
@@ -22,21 +22,7 @@ affiliation:
 authornote: |
 
 abstract: |
-  One or two sentences providing a **basic introduction** to the field,  comprehensible to a scientist in any discipline.
-  
-  Two to three sentences of **more detailed background**, comprehensible  to scientists in related disciplines.
-  
-  One sentence clearly stating the **general problem** being addressed by  this particular study.
-  
-  One sentence summarizing the main result (with the words "**here we show**" or their equivalent).
-  
-  Two or three sentences explaining what the **main result** reveals in direct comparison to what was thought to be the case previously, or how the  main result adds to previous knowledge.
-  
-  One or two sentences to put the results into a more **general context**.
-  
-  Two or three sentences to provide a **broader perspective**, readily comprehensible to a scientist in any discipline.
-  
-  <!-- https://tinyurl.com/ybremelq -->
+  aaaa
   
 keywords          : "teaching, expertise, skill transmission, artistic expression, music"
 wordcount         : "X"
@@ -92,7 +78,7 @@ source(here("experiment-1/analysis/preprocessor", "error_summary.R"), chdir = TR
 
 ### 2.1.1. Participants
 
-We recruited 36 piano experts who played the piano for at least the past 10 years or were studying piano performance at a music school at the time of recruitment. For data analysis, we excluded 5 participants due to experimental errors (3), an overall deviated tempo (2). Thirty-one participants (`r nrow(dt_included[Gender == "Female"])` female) were included in data analysis. Most participants were right-handed (left; `r nrow(dt_included[Handedness == "Left"])`, both; `r nrow(dt_included[Handedness == "Both"])`). They had `r round(mean(dt_included$PianoTotalPractice), 2)` years of practice on average (*SD* = `r round(sd(dt_included$PianoTotalPractice), 2)`). All participants gave their informed consent before the experiment started and received vouchers for their participation. The study was approved by the United Ethical Review Committee for Research in Psychology (EPKEB) in Hungary.
+We recruited 36 piano experts who played the piano for at least the past 10 years or were studying piano performance at a music school at the time of recruitment. For data analysis, we excluded 5 participants due to experimental errors (3), an overall deviated tempo (2; outside 2 standard deviations from the average tempo across participants). Thirty-one participants (`r nrow(dt_included[Gender == "Female"])` female) were included in data analysis. Most participants were right-handed (left; `r nrow(dt_included[Handedness == "Left"])`, both; `r nrow(dt_included[Handedness == "Both"])`). They had `r round(mean(dt_included$PianoTotalPractice), 2)` years of practice on average (*SD* = `r round(sd(dt_included$PianoTotalPractice), 2)`). All participants gave their informed consent before the experiment started and received vouchers for their participation. The study was approved by the United Ethical Review Committee for Research in Psychology (EPKEB) in Hungary.
 
 ### 2.1.2. Apparatus and stimuli
 
@@ -125,7 +111,7 @@ stim_a <- image_border(image_read(here("paper/image/sheetmusic-1", "stim_a.png")
 stim_d <- image_border(image_read(here("paper/image/sheetmusic-1", "stim_d.png")), "#FFFFFF", "120x120")
 stim_n <- image_border(image_read(here("paper/image/sheetmusic-1", "stim_n.png")), "#FFFFFF", "120x120")
 
-# Combine
+# combine
 img_stimuli <- image_append(c(stim_n, stim_a, stim_d), stack = TRUE)
 img_stimuli <- image_annotate(img_stimuli, "(A)", size = 80, location = "+100+0", color = "black", font = "helvetica")
 img_stimuli <- image_annotate(img_stimuli, "(B)", size = 80, location = "+100+650", color = "black", font = "helvetica")
@@ -165,13 +151,28 @@ img_ioi_art_1 <- image_read(here("paper/image", "ioi_art_1.png"))
 
 ### 2.2.2. Key-Overlap Time (KOT)
 
-A two-way repeated-measures ANOVA with the factors Condition (teaching vs. performing) and Subcomponent-LS (legato vs. staccato) revealed that there was a significant main effect of Subcomponent-LS (F) and a significant interaction between Condition and Subcomponent-LS (F). Post-hoc comparisons showed that participants produced shorter staccato in the teaching condition than in the performing condition (t) whereas there was no significant difference in legato between the teaching and performing condition (t).
+Blah
 
-We also calculated KOR...
+```{r kot-art-1, include = FALSE}
+kot_art_plot <- data.table(subject = kot_art[Condition == "teaching"]$SubNr, teaching = kot_art[Condition == "teaching"]$Mean, performing = kot_art[Condition == "performing"]$Mean, subcomponent = kot_art[Condition == "teaching"]$Subcomponent)
+
+kot_art_1 <- ggpaired(kot_art_plot, cond = "performing", cond2 = "teaching", color = "condition", facet.by = "subcomponent", line.size = 0.3, line.color = "gray", palette = "aaas", xlab = "Condition", ylab = "KOT (ms)", title = "KOT: Articulation") +
+  ylim(-170, 105) +
+  stat_compare_means(label = "p.signif", hide.ns = TRUE, size = 10, label.x = 1.5, label.y = -50, paired = TRUE) +
+  theme_pubr(base_size = 20, legend = "none", base_family = "Helvetica")
+
+# save plots
+ggsave(here("paper/image", "kot_art_1.png"), plot = kot_art_1, dpi = 600, width = 7, height = 5)
+img_kot_art_1 <- image_read(here("paper/image", "kot_art_1.png"))
+```
 
 ### 2.2.3. Key Velocity (KV)
 
+Blah
+
 ### 2.2.4. KV Transition Points
+
+Blah
 
 ## 2.3. Results (Dynamics)
 ### 2.3.1. Interonset Intervals (IOIs)
@@ -192,17 +193,43 @@ ggsave(here("paper/image", "ioi_dyn_1.png"), plot = ioi_dyn_1, dpi = 600, width 
 img_ioi_dyn_1 <- image_read(here("paper/image", "ioi_dyn_1.png"))
 ```
 
-
-
 ### 2.3.2. Key Velocity (KV)
+
+Blah
+
 ### 2.3.3. KV Transition Points
+
+Blah
+
 ### 2.3.4. Key-Overlap Time (KOT)
+
+Blah
+
+```{r kot-dyn-1, include = FALSE}
+kot_dyn_plot <- data.table(subject = kot_dyn[Condition == "teaching"]$SubNr, teaching = kot_dyn[Condition == "teaching"]$Mean, performing = kot_dyn[Condition == "performing"]$Mean, subcomponent = kot_dyn[Condition == "teaching"]$Subcomponent)
+
+kot_dyn_1 <- ggpaired(kot_dyn_plot, cond = "performing", cond2 = "teaching", color = "condition", facet.by = "subcomponent", line.size = 0.3, line.color = "gray", palette = "aaas", xlab = "Condition", ylab = "KOT (ms)", title = "KOT: Dynamics") +
+  ylim(-170, 105) +
+  stat_compare_means(label = "p.signif", hide.ns = TRUE, size = 10, label.x = 1.5, label.y = 0, paired = TRUE) +
+  theme_pubr(base_size = 20, legend = "none", base_family = "Helvetica")
+
+# save plots
+ggsave(here("paper/image", "kot_dyn_1.png"), plot = kot_dyn_1, dpi = 600, width = 7, height = 5)
+img_kot_dyn_1 <- image_read(here("paper/image", "kot_dyn_1.png"))
+```
 
 ```{r plot-ioi-1, out.width = "100%", fig.cap = "\\label{fig:ioi-1}Experiment 1: IOIs (ms) when playing the piece with either articulation (left) or dynamics (right). Each box indicates the IQR with the median, and whiskers extend to a maximum of 1.5 × IQR beyond the box. Significance levels: * \\textit{p} < .05, ** \\textit{p} < .01, *** \\textit{p} < .001"}
 # combine
 img_ioi_1 <- image_append(c(img_ioi_art_1, img_ioi_dyn_1))
 image_write(img_ioi_1, path = here("paper/image", "img_ioi_1.png"), format = "png")
 img_ioi_1
+```
+
+```{r plot-kot-1, out.width = "100%", fig.cap = "\\label{fig:kot-1}Experiment 1: KOT (ms) when playing the piece with either articulation (left) or dynamics (right). Each box indicates the IQR with the median, and whiskers extend to a maximum of 1.5 × IQR beyond the box. Significance levels: * \\textit{p} < .05, ** \\textit{p} < .01, *** \\textit{p} < .001"}
+# combine
+img_kot_1 <- image_append(c(img_kot_art_1, img_kot_dyn_1))
+image_write(img_kot_1, path = here("paper/image", "img_kot_1.png"), format = "png")
+img_kot_1
 ```
 
 ## 2.4. Discussion
@@ -237,7 +264,7 @@ stim_a_2 <- image_border(image_read(here("paper/image/sheetmusic-2", "stim_a.png
 stim_d_2 <- image_border(image_read(here("paper/image/sheetmusic-2", "stim_d.png")), "#FFFFFF", "120x120")
 stim_n_2 <- image_border(image_read(here("paper/image/sheetmusic-2", "stim_n.png")), "#FFFFFF", "120x120")
 
-# Combine
+# combine
 img_stimuli_2 <- image_append(c(stim_n_2, stim_a_2, stim_d_2), stack = TRUE)
 img_stimuli_2 <- image_annotate(img_stimuli_2, "(A)", size = 80, location = "+100+70", color = "black", font = "helvetica")
 img_stimuli_2 <- image_annotate(img_stimuli_2, "(B)", size = 80, location = "+100+1125", color = "black", font = "helvetica")
@@ -274,9 +301,31 @@ ggsave(here("paper/image", "ioi_art_2.png"), plot = ioi_art_2, dpi = 600, width 
 img_ioi_art_2 <- image_read(here("paper/image", "ioi_art_2.png"))
 ```
 
-### 3.2.2. Key-Overlap Time (KOT)
+### 3.2.2. Key-Overlap Ratio (KOR)
+
+Blah
+
+```{r kot-art-2, include = FALSE}
+kot_art_plot <- data.table(subject = kot_art[Condition == "teaching"]$SubNr, teaching = kot_art[Condition == "teaching"]$Mean, performing = kot_art[Condition == "performing"]$Mean, subcomponent = kot_art[Condition == "teaching"]$Subcomponent)
+
+kot_art_2 <- ggpaired(kot_art_plot, cond = "performing", cond2 = "teaching", color = "condition", facet.by = "subcomponent", line.size = 0.3, line.color = "gray", palette = "aaas", xlab = "Condition", ylab = "KOR", title = "KOR: Articulation") +
+  ylim(-1, 0.4) +
+  stat_compare_means(label = "p.signif", hide.ns = TRUE, size = 10, label.x = 1.5, label.y = -0.5, paired = TRUE) +
+  theme_pubr(base_size = 20, legend = "none", base_family = "Helvetica")
+
+# save plots
+ggsave(here("paper/image", "kot_art_2.png"), plot = kot_art_1, dpi = 600, width = 7, height = 5)
+img_kot_art_2 <- image_read(here("paper/image", "kot_art_2.png"))
+```
+
 ### 3.2.3. Key Velocity (KV)
+
+Blah
+
 ### 3.2.4. KV Transition Points
+
+Blah
+
 
 ## 3.3. Results (Dynamics)
 ### 3.3.1. Interonset Intervals (IOIs)
@@ -304,8 +353,29 @@ img_ioi_2
 ```
 
 ### 3.3.2. Key Velocity (KV)
+
+Blah
+
 ### 3.3.3. KV Transition Points
-### 3.3.4. Key-Overlap Time (KOT)
+
+Blah
+
+### 3.3.4. Key-Overlap Ratio (KOR)
+
+Blah
+
+```{r kot-dyn-2, include = FALSE}
+kot_dyn_plot <- data.table(subject = kot_dyn[Condition == "teaching"]$SubNr, teaching = kot_dyn[Condition == "teaching"]$Mean, performing = kot_dyn[Condition == "performing"]$Mean, subcomponent = kot_dyn[Condition == "teaching"]$Subcomponent)
+
+kot_dyn_2 <- ggpaired(kot_dyn_plot, cond = "performing", cond2 = "teaching", color = "condition", facet.by = "subcomponent", line.size = 0.3, line.color = "gray", palette = "aaas", xlab = "Condition", ylab = "KOR", title = "KOR: Dynamics") +
+  ylim(-1, 0.4) +
+  stat_compare_means(label = "p.signif", hide.ns = TRUE, size = 10, label.x = 1.5, label.y = -0.5, paired = TRUE) +
+  theme_pubr(base_size = 20, legend = "none", base_family = "Helvetica")
+
+# save plots
+ggsave(here("paper/image", "kot_dyn_2.png"), plot = kot_dyn_1, dpi = 600, width = 7, height = 5)
+img_kot_dyn_2 <- image_read(here("paper/image", "kot_dyn_2.png"))
+```
 
 ## 3.4. Discussion
 
@@ -323,10 +393,9 @@ All authors have no conflict of interest.
 
 # References
 
-
 \begingroup
-\setlength{\parindent}{-0.5in}
-\setlength{\leftskip}{0.5in}
+\setlength{\parindent}{-0in}
+\setlength{\leftskip}{0in}
 
 <div id="refs" custom-style="Bibliography"></div>
 \endgroup
