--- a/paper/manuscript.tex
+++ b/paper/manuscript.tex
@@ -138,19 +138,7 @@ Correspondence concerning this article should be addressed to Atsuko Tominaga, Q
 \date{}
 
 \abstract{
-One or two sentences providing a \textbf{basic introduction} to the field, comprehensible to a scientist in any discipline.
-
-Two to three sentences of \textbf{more detailed background}, comprehensible to scientists in related disciplines.
-
-One sentence clearly stating the \textbf{general problem} being addressed by this particular study.
-
-One sentence summarizing the main result (with the words ``\textbf{here we show}'' or their equivalent).
-
-Two or three sentences explaining what the \textbf{main result} reveals in direct comparison to what was thought to be the case previously, or how the main result adds to previous knowledge.
-
-One or two sentences to put the results into a more \textbf{general context}.
-
-Two or three sentences to provide a \textbf{broader perspective}, readily comprehensible to a scientist in any discipline.
+aaaa
 }
 
 \begin{document}
@@ -180,7 +168,7 @@ If experts rely on generic action modulations, it can be expected that they will
 \hypertarget{participants}{%
 \subsubsection{2.1.1. Participants}\label{participants}}
 
-We recruited 36 piano experts who played the piano for at least the past 10 years or were studying piano performance at a music school at the time of recruitment. For data analysis, we excluded 5 participants due to experimental errors (3), an overall deviated tempo (2). Thirty-one participants (15 female) were included in data analysis. Most participants were right-handed (left; 2, both; 2). They had 12.45 years of practice on average (\emph{SD} = 5.66). All participants gave their informed consent before the experiment started and received vouchers for their participation. The study was approved by the United Ethical Review Committee for Research in Psychology (EPKEB) in Hungary.
+We recruited 36 piano experts who played the piano for at least the past 10 years or were studying piano performance at a music school at the time of recruitment. For data analysis, we excluded 5 participants due to experimental errors (3), an overall deviated tempo (2; outside 2 standard deviations from the average tempo across participants). Thirty-one participants (15 female) were included in data analysis. Most participants were right-handed (left; 2, both; 2). They had 12.45 years of practice on average (\emph{SD} = 5.66). All participants gave their informed consent before the experiment started and received vouchers for their participation. The study was approved by the United Ethical Review Committee for Research in Psychology (EPKEB) in Hungary.
 
 \hypertarget{apparatus-and-stimuli}{%
 \subsubsection{2.1.2. Apparatus and stimuli}\label{apparatus-and-stimuli}}
@@ -225,20 +213,22 @@ All effects are reported as significant at \emph{p} \textless{} .05. We first re
 \hypertarget{interonset-intervals-iois}{%
 \subsubsection{2.2.1. Interonset Intervals (IOIs)}\label{interonset-intervals-iois}}
 
-In order to compare the mean IOIs between the teaching and performing condition, we conducted a Wiscoxon Signed-rank test, instead of a paired \emph{t}-test, because a Shapiro-Wilk test showed that the distribution of the mean difference was significantly different from the normal distribution. The Wiscoxon Signed-rank test revealed that participants played more slowly in the teaching condition {[}\emph{Mdn} = 189.55 (ms), \emph{IQR} = 26.74{]} than in the performing condition {[}\emph{Mdn} = 185.24 (ms), \emph{IQR} = 19.21{]} while playing the piece with notated articulation (\emph{p} = 0.017; \emph{Figure \ref{fig:ioi-1}}).
+In order to compare the mean IOIs between the teaching and performing condition, we conducted a Wiscoxon Signed-rank test, instead of a paired \emph{t}-test, because a Shapiro-Wilk test showed that the distribution of the mean difference was significantly different from the normal distribution. The Wiscoxon Signed-rank test revealed that participants played more slowly in the teaching condition {[}\emph{Mdn} = 189.55 (ms), \emph{IQR} = 26.74{]} than in the performing condition {[}\emph{Mdn} = 185.24 (ms), \emph{IQR} = 19.32{]} while playing the piece with notated articulation (\emph{p} = 0.021; \emph{Figure \ref{fig:ioi-1}}).
 
 \hypertarget{key-overlap-time-kot}{%
 \subsubsection{2.2.2. Key-Overlap Time (KOT)}\label{key-overlap-time-kot}}
 
-A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~performing) and Subcomponent-LS (legato vs.~staccato) revealed that there was a significant main effect of Subcomponent-LS (F) and a significant interaction between Condition and Subcomponent-LS (F). Post-hoc comparisons showed that participants produced shorter staccato in the teaching condition than in the performing condition (t) whereas there was no significant difference in legato between the teaching and performing condition (t).
-
-We also calculated KOR\ldots{}
+Blah
 
 \hypertarget{key-velocity-kv}{%
 \subsubsection{2.2.3. Key Velocity (KV)}\label{key-velocity-kv}}
 
+Blah
+
 \hypertarget{kv-transition-points}{%
 \subsubsection{2.2.4. KV Transition Points}\label{kv-transition-points}}
+
+Blah
 
 \hypertarget{results-dynamics}{%
 \subsection{2.3. Results (Dynamics)}\label{results-dynamics}}
@@ -246,19 +236,29 @@ We also calculated KOR\ldots{}
 \hypertarget{interonset-intervals-iois-1}{%
 \subsubsection{2.3.1. Interonset Intervals (IOIs)}\label{interonset-intervals-iois-1}}
 
-The Wiscoxon Signed-rank test revealed no significant difference between the teaching condition {[}\emph{Mdn} = 186.68 (ms), \emph{IQR} = 21.99{]} and the performing condition {[}\emph{Mdn} = 186.27 (ms), \emph{IQR} = 20.04{]} while playing the piece with notated dynamics (\emph{p} = 0.120; \emph{Figure \ref{fig:ioi-1}}).
+The Wiscoxon Signed-rank test revealed no significant difference between the teaching condition {[}\emph{Mdn} = 186.29 (ms), \emph{IQR} = 21.83{]} and the performing condition {[}\emph{Mdn} = 186.27 (ms), \emph{IQR} = 19.58{]} while playing the piece with notated dynamics (\emph{p} = 0.111; \emph{Figure \ref{fig:ioi-1}}).
 
 \hypertarget{key-velocity-kv-1}{%
 \subsubsection{2.3.2. Key Velocity (KV)}\label{key-velocity-kv-1}}
 
+Blah
+
 \hypertarget{kv-transition-points-1}{%
 \subsubsection{2.3.3. KV Transition Points}\label{kv-transition-points-1}}
+
+Blah
 
 \hypertarget{key-overlap-time-kot-1}{%
 \subsubsection{2.3.4. Key-Overlap Time (KOT)}\label{key-overlap-time-kot-1}}
 
+Blah
+
 \begin{figure}
 \includegraphics[width=1\linewidth]{manuscript_files/figure-latex/plot-ioi-1-1} \caption{\label{fig:ioi-1}Experiment 1: IOIs (ms) when playing the piece with either articulation (left) or dynamics (right). Each box indicates the IQR with the median, and whiskers extend to a maximum of 1.5 × IQR beyond the box. Significance levels: * \textit{p} < .05, ** \textit{p} < .01, *** \textit{p} < .001}\label{fig:plot-ioi-1}
+\end{figure}
+
+\begin{figure}
+\includegraphics[width=1\linewidth]{manuscript_files/figure-latex/plot-kot-1-1} \caption{\label{fig:kot-1}Experiment 1: KOT (ms) when playing the piece with either articulation (left) or dynamics (right). Each box indicates the IQR with the median, and whiskers extend to a maximum of 1.5 × IQR beyond the box. Significance levels: * \textit{p} < .05, ** \textit{p} < .01, *** \textit{p} < .001}\label{fig:plot-kot-1}
 \end{figure}
 
 \hypertarget{discussion}{%
@@ -304,17 +304,23 @@ As Experiment 1, we first report results for performance the piece with the nota
 \hypertarget{interonset-intervals-iois-2}{%
 \subsubsection{3.2.1. Interonset Intervals (IOIs)}\label{interonset-intervals-iois-2}}
 
-A paired-sample \emph{t}-test showed that participants played more slowly in the teaching condition {[}\emph{M} = 0.966, \emph{SD} = 0.049{]} than in the performing condition {[}\emph{M} = 0.953, \emph{SD} = 0.040{]} while playing the piece with notated articulation (\emph{t}(19) = 2.47
-, \emph{p} = 0.023; \emph{Figure \ref{fig:ioi-2}}). A Wiscoxon Signed-rank test also confirmed that there was a significant difference between the two condition (\emph{p} = 0.033).
+A paired-sample \emph{t}-test showed that participants played more slowly in the teaching condition {[}\emph{M} = 0.972, \emph{SD} = 0.042{]} than in the performing condition {[}\emph{M} = 0.958, \emph{SD} = 0.034{]} while playing the piece with notated articulation (\emph{t}(18) = 2.64
+, \emph{p} = 0.017; \emph{Figure \ref{fig:ioi-2}}). A Wiscoxon Signed-rank test also confirmed that there was a significant difference between the two condition (\emph{p} = 0.026).
 
-\hypertarget{key-overlap-time-kot-2}{%
-\subsubsection{3.2.2. Key-Overlap Time (KOT)}\label{key-overlap-time-kot-2}}
+\hypertarget{key-overlap-ratio-kor}{%
+\subsubsection{3.2.2. Key-Overlap Ratio (KOR)}\label{key-overlap-ratio-kor}}
+
+Blah
 
 \hypertarget{key-velocity-kv-2}{%
 \subsubsection{3.2.3. Key Velocity (KV)}\label{key-velocity-kv-2}}
 
+Blah
+
 \hypertarget{kv-transition-points-2}{%
 \subsubsection{3.2.4. KV Transition Points}\label{kv-transition-points-2}}
+
+Blah
 
 \hypertarget{results-dynamics-1}{%
 \subsection{3.3. Results (Dynamics)}\label{results-dynamics-1}}
@@ -322,7 +328,7 @@ A paired-sample \emph{t}-test showed that participants played more slowly in the
 \hypertarget{interonset-intervals-iois-3}{%
 \subsubsection{3.3.1. Interonset Intervals (IOIs)}\label{interonset-intervals-iois-3}}
 
-A paired-sample \emph{t}-test showed no significant difference between the teaching condition {[}\emph{M} = 0.957, \emph{SD} = 0.048{]} and the performing condition {[}\emph{M} = 0.956, \emph{SD} = 0.043{]} while playing the piece with notated articulation (\emph{t}(19) = 0.21, \emph{p} = 0.837; \emph{Figure \ref{fig:ioi-2}}). A Wiscoxon Signed-rank test also confirmed that there was no significant difference between the two condition (\emph{p} = 0.956).
+A paired-sample \emph{t}-test showed no significant difference between the teaching condition {[}\emph{M} = 0.962, \emph{SD} = 0.041{]} and the performing condition {[}\emph{M} = 0.961, \emph{SD} = 0.037{]} while playing the piece with notated articulation (\emph{t}(18) = 0.37, \emph{p} = 0.719; \emph{Figure \ref{fig:ioi-2}}). A Wiscoxon Signed-rank test also confirmed that there was no significant difference between the two condition (\emph{p} = 0.922).
 
 \begin{figure}
 \includegraphics[width=1\linewidth]{manuscript_files/figure-latex/plot-ioi-2-1} \caption{\label{fig:ioi-2}Experiment 2: Normalised IOIs when playing the piece with either articulation (left) or dynamics (right). Each box indicates the IQR with the median, and whiskers extend to a maximum of 1.5 × IQR beyond the box. Significance levels: * \textit{p} < .05, ** \textit{p} < .01, *** \textit{p} < .001}\label{fig:plot-ioi-2}
@@ -331,11 +337,17 @@ A paired-sample \emph{t}-test showed no significant difference between the teach
 \hypertarget{key-velocity-kv-3}{%
 \subsubsection{3.3.2. Key Velocity (KV)}\label{key-velocity-kv-3}}
 
+Blah
+
 \hypertarget{kv-transition-points-3}{%
 \subsubsection{3.3.3. KV Transition Points}\label{kv-transition-points-3}}
 
-\hypertarget{key-overlap-time-kot-3}{%
-\subsubsection{3.3.4. Key-Overlap Time (KOT)}\label{key-overlap-time-kot-3}}
+Blah
+
+\hypertarget{key-overlap-ratio-kor-1}{%
+\subsubsection{3.3.4. Key-Overlap Ratio (KOR)}\label{key-overlap-ratio-kor-1}}
+
+Blah
 
 \hypertarget{discussion-1}{%
 \subsection{3.4. Discussion}\label{discussion-1}}
@@ -361,8 +373,8 @@ All authors have no conflict of interest.
 \section{References}\label{references}}
 
 \begingroup
-\setlength{\parindent}{-0.5in}
-\setlength{\leftskip}{0.5in}
+\setlength{\parindent}{-0in}
+\setlength{\leftskip}{0in}
 
 \hypertarget{refs}{}
 \begin{cslreferences}
