--- a/experiment-2/analysis/preprocessor/included_summary.Rmd
+++ b/experiment-2/analysis/preprocessor/included_summary.Rmd
@@ -82,6 +82,7 @@ dt_vel_diff[, .(N = .N, Mean = mean(Diff), SD = sd(Diff)), by = .(SubNr, Conditi
 ```
 
 ## Excluded participnats
+- SubNr 2: A deviated tempo
 - SubNr 3: Insufficient motor skills
 
 ### Export only included participants
