--- a/paper/manuscript.tex
+++ b/paper/manuscript.tex
@@ -275,7 +275,7 @@ Blah
 \hypertarget{participants-1}{%
 \subsubsection{3.1.1. Participants}\label{participants-1}}
 
-We recruited 21 piano experts who already had a degree in (above bachelor or equivalent) in piano performance/teaching or were studying piano performance at a music school at the time of recruitment. One participant was excluded due to insufficient motor skills (see details in \emph{\protect\hyperlink{procedure-2}{Procedure}}). Twenty participants (9 female) were included in data analysis. Most participants were right-handed (left; 2). They had 15.65 years of practice on average (\emph{SD} = 5.67).
+We recruited 21 piano experts who already had a degree in (above bachelor or equivalent) in piano performance/teaching or were studying piano performance at a music school at the time of recruitment. For data analysis, we excluded 1 participants due to insufficient motor skills (1) and an overall deviated tempo (1). Nineteen participants (9 female) were included in data analysis. Most participants were right-handed (left; 2). They had 15.65 years of practice on average (\emph{SD} = 5.67).
 
 \hypertarget{apparatus-and-stimuli-1}{%
 \subsubsection{3.1.2. Apparatus and stimuli}\label{apparatus-and-stimuli-1}}
@@ -330,10 +330,6 @@ Blah
 
 A paired-sample \emph{t}-test showed no significant difference between the teaching condition {[}\emph{M} = 0.962, \emph{SD} = 0.041{]} and the performing condition {[}\emph{M} = 0.961, \emph{SD} = 0.037{]} while playing the piece with notated articulation (\emph{t}(18) = 0.37, \emph{p} = 0.719; \emph{Figure \ref{fig:ioi-2}}). A Wiscoxon Signed-rank test also confirmed that there was no significant difference between the two condition (\emph{p} = 0.922).
 
-\begin{figure}
-\includegraphics[width=1\linewidth]{manuscript_files/figure-latex/plot-ioi-2-1} \caption{\label{fig:ioi-2}Experiment 2: Normalised IOIs when playing the piece with either articulation (left) or dynamics (right). Each box indicates the IQR with the median, and whiskers extend to a maximum of 1.5 × IQR beyond the box. Significance levels: * \textit{p} < .05, ** \textit{p} < .01, *** \textit{p} < .001}\label{fig:plot-ioi-2}
-\end{figure}
-
 \hypertarget{key-velocity-kv-3}{%
 \subsubsection{3.3.2. Key Velocity (KV)}\label{key-velocity-kv-3}}
 
@@ -348,6 +344,14 @@ Blah
 \subsubsection{3.3.4. Key-Overlap Ratio (KOR)}\label{key-overlap-ratio-kor-1}}
 
 Blah
+
+\begin{figure}
+\includegraphics[width=1\linewidth]{manuscript_files/figure-latex/plot-ioi-2-1} \caption{\label{fig:ioi-2}Experiment 2: Normalised IOIs when playing the piece with either articulation (left) or dynamics (right). Each box indicates the IQR with the median, and whiskers extend to a maximum of 1.5 × IQR beyond the box. Significance levels: * \textit{p} < .05, ** \textit{p} < .01, *** \textit{p} < .001}\label{fig:plot-ioi-2}
+\end{figure}
+
+\begin{figure}
+\includegraphics[width=1\linewidth]{manuscript_files/figure-latex/plot-kot-2-1} \caption{\label{fig:kot-1}Experiment 2: KOR when playing the piece with either articulation (left) or dynamics (right). Each box indicates the IQR with the median, and whiskers extend to a maximum of 1.5 × IQR beyond the box. Significance levels: * \textit{p} < .05, ** \textit{p} < .01, *** \textit{p} < .001}\label{fig:plot-kot-2}
+\end{figure}
 
 \hypertarget{discussion-1}{%
 \subsection{3.4. Discussion}\label{discussion-1}}
