update articulation (posthoc tests)
Signed-off-by: Atsuko Tominaga <Tominaga_Atsuko@phd.ceu.edu>

--- a/experiment-2/analysis/stats/articulation.Rmd
+++ b/experiment-2/analysis/stats/articulation.Rmd
@@ -164,8 +164,8 @@ summary(kor_art_aov_2)
 
 #### Post-hoc (emmeans)
 ```{r post-hoc-2, echo = FALSE}
-test(pairs(emmeans(kor_art_aov,~Condition|Subcomponent)), joint = TRUE)
-pairs(emmeans(kor_art_aov,~Condition|Subcomponent), adjust = "tukey")
+kor_art_posthoc <- test(pairs(emmeans(kor_art_aov,~Condition|Subcomponent), adjust = "tukey"), joint = TRUE)
+kor_art_posthoc
 ```
 
 ## 3. Trial by trial - individual{#kor_art_ind_trial}
@@ -277,8 +277,8 @@ summary(kot_art_aov_2)
 
 #### Post-hoc (emmeans)
 ```{r post-hoc-1, echo = FALSE}
-test(pairs(emmeans(kot_art_aov,~Condition|Subcomponent)), joint = TRUE)
-pairs(emmeans(kot_art_aov,~Condition|Subcomponent), adjust = "tukey")
+kot_art_posthoc <- test(pairs(emmeans(kot_art_aov,~Condition|Subcomponent), adjust = "tukey"), joint = TRUE)
+kot_art_posthoc
 ```
 
 ## 3. Trial by trial - individual{#kot_art_ind_trial}
