--- a/experiment-1/analysis/stats/articulation.Rmd
+++ b/experiment-1/analysis/stats/articulation.Rmd
@@ -169,7 +169,7 @@ ggpaired(kot_art_plot, cond = "performing", cond2 = "teaching", color = "conditi
 ```
 
 ### Statistics
-#### Two-way ANOVA (car_aov)
+#### Two-way ANOVA (aov_car)
 ```{r anova-art-kot-1, echo = FALSE}
 kot_art_aov <- aov_car(Mean ~ Condition*Subcomponent + Error(SubNr/(Condition*Subcomponent)), data = kot_art)
 summary(kot_art_aov)
@@ -183,8 +183,8 @@ summary(kot_art_aov_2)
 
 #### Post-hoc (emmeans)
 ```{r post-hoc-1, echo = FALSE}
-test(pairs(emmeans(kot_art_aov,~Condition|Subcomponent)), joint = TRUE)
-pairs(emmeans(kot_art_aov,~Condition|Subcomponent), adjust = "tukey")
+kot_art_posthoc <- test(pairs(emmeans(kot_art_aov,~Condition|Subcomponent), adjust = "tukey"), joint = TRUE)
+kot_art_posthoc
 ```
 
 ## 3. Trial by trial - individual{#kot_art_ind_trial}
@@ -283,7 +283,7 @@ ggpaired(kor_art_plot, cond = "performing", cond2 = "teaching", color = "conditi
 ```
 
 ### Statistics
-#### Two-way ANOVA (car_aov)
+#### Two-way ANOVA (aov_car)
 ```{r anova-art-kor-1, echo = FALSE}
 kor_art_aov <- aov_car(Mean ~ Condition*Subcomponent + Error(SubNr/(Condition*Subcomponent)), data = kor_art)
 summary(kor_art_aov)
@@ -297,8 +297,8 @@ summary(kor_art_aov_2)
 
 #### Post-hoc (emmeans)
 ```{r post-hoc-2, echo = FALSE}
-test(pairs(emmeans(kor_art_aov,~Condition|Subcomponent)), joint = TRUE)
-pairs(emmeans(kor_art_aov,~Condition|Subcomponent), adjust = "tukey")
+kor_art_posthoc <- test(pairs(emmeans(kor_art_aov,~Condition|Subcomponent), adjust = "tukey"), joint = TRUE)
+kor_art_posthoc
 ```
 
 ## 3. Trial by trial - individual{#kor_art_ind_trial}
@@ -395,7 +395,7 @@ ggpaired(kot_dyn_plot, cond = "performing", cond2 = "teaching", color = "conditi
 ```
 
 ### Statistics
-#### Two-way ANOVA (car_aov)
+#### Two-way ANOVA (aov_car)
 ```{r anova-dyn-kot-1, echo = FALSE}
 kot_dyn_aov <- aov_car(Mean ~ Condition*Subcomponent + Error(SubNr/(Condition*Subcomponent)), data = kot_dyn)
 summary(kot_dyn_aov)
@@ -500,7 +500,7 @@ ggpaired(kor_dyn_plot, cond = "performing", cond2 = "teaching", color = "conditi
 ```
 
 ### Statistics
-#### Two-way ANOVA (car_aov)
+#### Two-way ANOVA (aov_car)
 ```{r anova-dyn-kor-1, echo = FALSE}
 kor_dyn_aov <- aov_car(Mean ~ Condition*Subcomponent + Error(SubNr/(Condition*Subcomponent)), data = kor_dyn)
 summary(kor_dyn_aov)
